# advent-of-code

./: Cargo.toml  README.md
2022/: .pre-commit-config.yaml  Cargo.toml  aoc.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs
2022/day/1/: main.rs
2022/day/2/: main.rs
2022/day/3/: Cargo.toml  main.rs
src/: aoc.rs
src/aoc2022/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  mod.rs
src/aoc2023/: day1.rs  day2.rs  day3.rs  day4.rs
