[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.11" }
regex = { version = "1.9.1" }
iterwindows = { version = "0.3.0" }
nom = { version = "7.1.3" }
camino = { version = "1.1.6" }
clap = { version = "4", features = [ "derive" ] }
array2d = { version = "0.3.0" }

[[bin]]
name = "aoc"
path = "src/aoc.rs"
